# devoxx-ai-sports-commentary

./: .gitignore  DEMO.md  README.md  clickhouse.sql  generate_commentary.py  prompt.txt  publish_events.py  pyproject.toml
apps/: commentator.py  feed.py  generate_commentary.py  live_feed.py  queries.py  server.py
data/: 1316.json  1402.json  1601.json  1602.json  1701.json  events.json  livetext.json  matches.csv
