[tool.poetry]
name = "devoxx-ai-sports-commentary"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
ipython = "^8.23.0"
rich = "^13.7.1"
openai = "^1.19.0"
jsonlines = "^4.0.0"
streamlit = "^1.33.0"
watchdog = "^4.0.0"
pysondb = "^1.6.7"
streamlit-modal = "^0.1.2"
streamlit-float = "^0.3.2"
twisted = "^24.3.0"
kafka-python = "^2.0.2"
chdb = "^1.3.0"
clickhouse-connect = "^0.7.8"
sseclient = "^0.0.27"
asyncio = "^3.4.3"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sse-starlette = "^2.1.0"
aiokafka = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
